# commodity-trader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  metrics.py  models.py  store.py
app/routers/: health.py  orders.py  quotes.py
azure-pipelines/: README.md  ci.yml  pr-validation.yml  setup-ado.ps1  setup-ado.sh
azure-pipelines/templates/: promote-stage.yml
tests/: test_health.py  test_orders.py  test_quotes.py
